# winnow

./: .gitignore  Cargo.toml  LICENSE  README.md  make_license.py  winnow.tape
corpus/: manifest.csv
docs/: validation.md
examples/: akira_v2_x_tier1.yar
results/: fp_holdout.md  fp_independence.md  fp_table.md  overnight_summary.md  tier1_report.md
scripts/: build_corpus.sh  measure.sh  measure_holdout.sh  measure_independence.sh  overnight_grow.sh  split_corpus.sh
src/: behavior.rs  code.rs  elfview.rs  emit.rs  ingest.rs  main.rs  mask.rs  rarity.rs
